# ha-windows

./: .gitignore  CHANGELOG.md  CROSSPLATFORM_MIGRATION.md  HomeAssistantWindows.spec  HomeAssistantWindows_dir.spec  PLAN.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  TODO.md  commit.bat  do_git.py  fix_imports.py  preferences.json  pyproject.toml  requirements-macos.txt  requirements-windows.txt  requirements.txt  setup.py  start.py  version_info.txt
.github/workflows/: build-installer.yml  build-multiplatform.yml  build-windows.yml  release.yml
docs/: audio-library-research.md
hooks/: hook-pygame.py  hook-soundcard.py  hook-webrtcvad.py
installer/: README.md  build_installer.ps1  installer.nsi
scripts/: README.md  format.bat  lint.bat  run.bat  setup.bat  test.bat
src/: __init__.py  __main__.py  autostart.py  i18n.py  main.py  update_checker.py
src/commands/: __init__.py  audio_commands.py  button_entity.py  command_executor.py  media_commands.py  system_commands.py
src/core/: __init__.py  esphome_connection.py  esphome_protocol.py  esphome_server.py  hotkey_manager.py  mdns_discovery.py  models.py
src/notify/: __init__.py  announcement.py  service_entity.py  toast_notification.py
src/sensors/: __init__.py  config_sensor.py  esphome_sensors.py  media_player.py  thinking_sound_switch.py  windows_monitor.py
src/ui/: main_window.py  system_tray.py  system_tray_icon.py
src/voice/: __init__.py  audio_recorder.py  mpv_player.py  vad.py  voice_assistant.py  wake_word.py
src/wakewords/: manifest_config.yaml
tests/: MANUAL_TESTING.md  manual_ha_test.py  test_announcement.py  test_audio_ducking.py  test_audio_recording.py  test_command_executor.py  test_error_handling.py  test_esphome_protocol.py  test_integration.py  test_notification.py  test_sensors.py  test_timer_events.py
