[project]
name = "ha-windows"
version = "0.3.2"
description = "Home Assistant Windows Client - ESPHome Device Simulator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ha-china"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]

dependencies = [
    "customtkinter>=5.2.0",
    "aioesphomeapi>=42.0.0",
    "aiohttp>=3.8.0",
    "soundcard>=0.4.0",
    "numpy>=1.24.0,<2.0.0",
    "pygame>=2.5.0",
    "python-vlc>=3.0.0",
    "pymicro-wakeword>=2.0.0",
    "webrtcvad-wheels>=2.0.10",
    "psutil>=5.9.0",
    "zeroconf>=0.100.0",
    "win10toast>=0.9",
    "windows-toasts>=1.3.0",
    "pycaw>=0.0.1",
    "Pillow>=10.0.0",
    "pystray>=0.19.0",
    "pyinstaller>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/ha-china/ha-windows"
Repository = "https://github.com/ha-china/ha-windows"
Issues = "https://github.com/ha-china/ha-windows/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Black configuration
[tool.black]
line-length = 120
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
  | research_data
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = ["data/*", "research_data/*"]

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_any_generics = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "soundcard.*",
    "vlc.*",
    "pycaw.*",
    "webrtcvad.*",
    "customtkinter.*",
    "pystray.*",
    "win10toast.*",
    "windows_toasts.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]